WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39001
IDBRequest is not a proper ActiveDomObject
https://bugs.webkit.org/show_bug.cgi?id=39001
Summary
IDBRequest is not a proper ActiveDomObject
Andrei Popescu
Reported
2010-05-12 09:54:06 PDT
1. IDBRequest interface is not mentioned in the IsActiveDomType routine of the CodeGeneratorV8.pm 2. IDBRequest class should rename its m_stopped member to m_suspended and this flag should be reset when resume() is called. Patch following.
Attachments
Fix IDBRequest.
(2.93 KB, patch)
2010-05-12 10:07 PDT
,
Andrei Popescu
jorlow
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andrei Popescu
Comment 1
2010-05-12 10:07:18 PDT
Created
attachment 55865
[details]
Fix IDBRequest.
Jeremy Orlow
Comment 2
2010-05-12 10:12:18 PDT
Comment on
attachment 55865
[details]
Fix IDBRequest. r=me
WebKit Commit Bot
Comment 3
2010-05-15 12:53:16 PDT
Comment on
attachment 55865
[details]
Fix IDBRequest. Clearing flags on attachment: 55865 Committed
r59549
: <
http://trac.webkit.org/changeset/59549
>
WebKit Commit Bot
Comment 4
2010-05-15 12:53:21 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 5
2010-05-15 13:06:19 PDT
http://trac.webkit.org/changeset/59549
might have broken Chromium Linux Release
Adam Barth
Comment 6
2010-05-15 13:19:08 PDT
Too bad the EWS didn't run on this patch. :( Rolling out.
Adam Barth
Comment 7
2010-05-15 13:19:56 PDT
Reopening.
Eric Seidel (no email)
Comment 8
2010-05-15 13:36:23 PDT
Thank you Adam.
Andrei Popescu
Comment 9
2010-05-17 01:51:23 PDT
Oops, sorry about this. Fixing.
Jeremy Orlow
Comment 10
2010-05-17 06:34:05 PDT
Landed
http://trac.webkit.org/changeset/59605
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug